<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D527A"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/linear_uno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2c3e50"
        android:padding="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/app"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/numeroapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4sp"
            android:layout_toRightOf="@+id/texto"
            android:layout_centerVertical="true"
            android:text="@string/apps"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4sp"
            android:text="@string/cantidad"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/espacio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/cantidad"
            android:layout_centerVertical="true"
            android:text="@string/espacio"
            android:textColor="#ffffff"
            android:textSize="13sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button1"
            style="@style/button_text"
            android:text="@string/botonDesintalar" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ADS_BANNER_ID" />

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:headerDividersEnabled="true"
        android:footerDividersEnabled="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:listSelector="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@null"
        android:layout_above="@+id/layout"
        android:layout_below="@+id/linear_uno"
        android:dividerHeight="5dp"
        tools:ignore="InefficientWeight" />

</RelativeLayout>